    install dev. packages; e.g., installed "SDL.rpm", but not "SDL-dev.rpm")

  * Removed static "MAX_FILES" limit; now mallocs space for file info.
    structures.  (Should fix large stack crash on OS X, which is good.)

  * Fixed bug where ".thumbs" dir wouldn't get generated if it wasn't there
    and you went to the 'Open' dialog.


2003.Jun.17 (0.9.11)
  * Windows bugfixes.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Mac OS X print update.  Get to a print dialog by holding Alt/Option when
    clicking "Print."  (Similar to how Windows handles it.)
    Darrell Walisser <walisser@mac.com>

  * Hebrew translation!
    Dovix <dovix2003@yahoo.com>
    Koby <kobybo@hotmail.com>

  * Right-to-left language support (for Hebrew, for example).

  * Updated Korean translations.
    Mark K. Kim <mark@cbreak.org>

  * UTF-8 support in the Text Tool!
    Robert Glowczynski <robertg@software.com.pl>,
    Mantas Kriauciunas <monte@mail.lt>

  * Added 'The Gimp' to docs/PNG.txt
    Mantas Kriauciunas <monte@mail.lt>

  * Set $OUTPUT_CHARSET for Japanese locale, to fix Win32 issue.
    TOYAMA Shin-ichi <kyone@tky2.3web.ne.jp>

  * Lithuanian translation.
    Mantas Kriauciunas <monte@mail.lt>,
    Rita Verbauskaite <verba@centras.lt>

  * Fixed bug that would cause some translated stamp sounds to not load.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Added Dutch translation of (older version of) HTML documentation.
    (docs/html/README-nl.html; docs/nl/README.txt)
    Geert Stams <geert-csg@wanadoo.nl>

  * Updated Polish translations.
    Robert Glowczynski <robertg@software.com.pl>

  * Added Polish version of manpage.
    Robert Glowczynski <robertg@software.com.pl>

  * Restructured manpage sources (created "src/manpage/")

  * Fixed a few typos in the manpage.
    Robert Glowczynski <robertg@software.com.pl>

  * Fixed UTF-8 word-wrapping bug when there were no spaces
    (e.g., in some Japanese strings)
  